<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WITTI</string>
    <string name="action_settings">Settings</string>
    <string name="launch">Launch</string>
    <string name="demo">Demo</string>
    <string name="settings">Settings</string>
    <string name="groundSettingTitle">Display Drivable Ground</string>
    <string name="groundSettingSummary">Color the ground plane</string>
    <string name="refreshSettingTitle">Data Refresh Rate</string>
    <string name="refreshSettingDialog">Select the desired visulaization refresh rate (select zero for manual refresh)</string>
    <string name="title_activity_settings">SettingsActivity</string>
<<<<<<< .mine
    <string name="defaultRefreshSetting">0</string>
=======
    <string name="server_data_alert_title">Select data file from server:</string>
    <string name="generalCategory">General</string>
    <string name="launchCategory">Launch Mode</string>
    <string name="demoCategory">Demo Mode</string>
    
    <string name="tapSettingTitle">Enable Tap to Refresh</string>
    <string name="tapSettingSummary">Manually tapping the display will update the data visualized</string>
    
    <string name="serverLocationTitle">Select Server Location</string>
    <string name="serverLocationDialog">Enter the desired web address of the server for Launch mode</string>
    
    <string name="serverFileTitle">Select Server File</string>
    <string name="serverFileDialog">Enter the desired file name from server for Launch mode</string>
    
    <string name="demoFileTitle">Select Demo File</string>
    <string name="demoFileDialog">Select the desired demo file to be visualized in Demo mode</string>
    <string name="defaultDemoFile">file1</string>
    
>>>>>>> .r562
    <string name="title_activity_display">DisplayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="imageContent">imageContent</string>
    <string name="pathTracing">Path Drawing</string>
    <string name="displaySettingsText">Settings</string>
    <string name="displayOtherText">Other</string>

</resources>
