<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/generalCategory"
        android:key="generalPreferencesKey">
        <CheckBoxPreference
        android:key="groundSetting"
        android:title="@string/groundSettingTitle"
        android:summary="@string/groundSettingSummary"
        android:defaultValue="true" />
<<<<<<< .mine
    <ListPreference
=======
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/launchCategory"
        android:key="launchPreferencesKey">
	    <EditTextPreference
	        android:key="serverLocationSetting" 
	        android:title="@string/serverLocationTitle"
	        android:dialogTitle="@string/serverLocationDialog" />
	    <EditTextPreference
	        android:key="serverFileSetting" 
	        android:title="@string/serverFileTitle"
	        android:dialogTitle="@string/serverFileDialog" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/demoCategory"
        android:key="demoPreferencesKey">
	    <ListPreference
>>>>>>> .r562
        android:key="refreshSetting"
        android:title="@string/refreshSettingTitle"
        android:dialogTitle="@string/refreshSettingDialog"
        android:entries="@array/refreshEntries"
        android:entryValues="@array/refreshEntryValues" 
        android:defaultValue="@string/defaultRefreshSetting" />
    </PreferenceCategory>
</PreferenceScreen>