<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="#01A9DB"
        android:text="@string/app_name" />
    	 
    <Button 
        android:id="@+id/demoButton"
        android:layout_centerInParent="true"
        android:layout_width="150dp"
    	android:layout_height="wrap_content"
    	android:textSize="20sp"
    	android:text="@string/demo"
    	android:onClick="openDemo" />
    
    <Button 
        android:id="@+id/launchButton"
        android:layout_above="@id/demoButton"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
    	android:layout_height="wrap_content"
    	android:textSize="20sp"
    	android:text="@string/launch"
    	android:onClick="openLaunch" /> 
    
    <Button 
        android:id="@+id/settingsButton"
        android:layout_below="@id/demoButton"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
    	android:layout_height="wrap_content"
    	android:textSize="20sp"
    	android:text="@string/settings"
    	android:onClick="openSettings" /> 

</RelativeLayout>
